web/src/app/employees-view/employees-view.component.scss
.component-frame {
    div {
        padding: 8px;
    }
    .employee {
        padding: 8px;
        border-bottom: 1px solid rgb(226, 226, 226);
        &:hover {
            background-color: rgb(226, 226, 226);
            cursor: pointer;
            button {
                opacity: 100;
            }
        }
        button {
            opacity: 0;
            margin-right: 12px;
            &:hover {
                background-color: red;
                color: white;
                cursor: pointer;
            }
        }
    }
}

